wrap fix

--- a/sass/wp-job-manager.scss
+++ b/sass/wp-job-manager.scss
@@ -31,13 +31,6 @@ body.job-dashboard,
 body.listings-stats-dashboard,
 body.submit-resume,
 body.my-bookmarks {
-	&.page.top-menu-fixed,
-	&.single.top-menu-fixed {
-		.wrap {
-			margin-top: 80px;
-		}
-	}
-
 	input[type="text"],
 	select,
 	textarea,
@@ -359,7 +352,7 @@ body.job-dashboard {
 
 						ul.actions {
 							margin: 0;
-							
+
 							li {
 								a {
 									padding: 3em 1.45em 0;
